Add: Chat Service [채팅방 테이블 추가, 메세지 저장을 위한 Redis 추가], Update: Chat Service [채팅방 생성 구현 및 단위 테스트]

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -17,7 +17,9 @@ spring:
         format_sql: true
     generate-ddl: true
     open-in-view: false
-
+  redis:
+    host: <>
+    port: 6379
   mail:
     host: smtp.gmail.com
     port: 587
