Add: logback-spring.xml [실시간 로그 slack 연동], Update: GlobalExceptionHandler [파일 타입 오류 핸들링 추가]

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -44,6 +44,11 @@ spring:
 server:
   port: 8080
 
+logging:
+  slack:
+    webhook-uri: <>
+  config: classpath:logback-spring.xml
+
 token:
   secret: <>
   expiration_time: 1800000
