Add: TokenProperties [토큰 설정 파일 추가], Update: JwtAuthenticationFilter [인증 부분 로직 변경, Refresh Token 생성 및 저장 구현], schema.sql [users 테이블 refresh_token 컬럼 추가]

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -65,9 +65,16 @@ cloud:
 
 token:
   secret: <>
-  expiration_time: 1800000
   prefix: "Bearer "
-  header: "Authorization"
+  access:
+    header: "Authorization"
+    expiration_time: 1800000
+  refresh:
+    header: "RefreshToken"
+    expiration_time: 604800000
+
+social:
+  secret: <>
 
 kakao:
   client-id: <>
