Refactor: Redis [redis 설정 단일화] - 유저 서비스에 있는 조회수, 조회수 중복 처리 부분 클래스 분할 - redis에 저장되는 데이터 접두사, 만료 기간 yml 통합 저장 - redis 설정을 가져와 관리하는 공통 클래스 생성

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -90,3 +90,19 @@ user:
 front:
   domain: <>
   domain-local: <>
+
+redis:
+  block:
+    prefix: "block::"
+  message:
+    prefix: "message::"
+    expiration-time: 1800
+  like:
+    prefix: "like::"
+    expiration-time: 604800
+  views:
+    prefix: "views::"
+    expiration-time: 86400
+  viewDuplex:
+    prefix: "viewDuplex::"
+    expiration-time: 86400
